--- a/serenity-app/src/main/res/layout-large/item_server_select_plex.xml
+++ b/serenity-app/src/main/res/layout-large/item_server_select_plex.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/server_name"
-        style="@style/Widget.AppTheme.Button.OutlinedButton.Plex"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:clickable="true"
-        android:focusable="true"
-        tools:text="Emby Server" />
+<com.google.android.material.button.MaterialButton
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/server_name"
+  style="@style/Widget.AppTheme.Button.OutlinedButton.Plex"
+  android:layout_width="400dp"
+  android:layout_height="wrap_content"
+  android:layout_gravity="center_horizontal"
+  android:clickable="true"
+  android:focusable="true"
+  tools:text="Emby Server" />
