--- a/serenity-app/src/main/res/layout/season_custom_actionbar.xml
+++ b/serenity-app/src/main/res/layout/season_custom_actionbar.xml
@@ -1,46 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        style="@style/Widget.AppTheme.Toolbar.Transparent"
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="45dp">
+<com.google.android.material.appbar.MaterialToolbar
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  style="@style/Widget.AppTheme.Toolbar.Transparent"
+  android:id="@+id/toolbar"
+  android:layout_width="match_parent"
+  android:layout_height="45dp"
+>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/metaDataRow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+  <androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/metaDataRow"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+  >
 
-        <TextView
-                android:id="@+id/tvShowSeasonsDetailText"
-                style="@android:style/TextAppearance.Holo.Medium"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textColor="#F0F0F0"
-                android:gravity="center_vertical"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/tvShowSeasonsItemCount"
-                app:layout_constraintBottom_toBottomOf="parent"
-                tools:textColor="@color/white"
-                tools:text="This is some text"
-                tools:ignore="SelectableText" />
+    <TextView
+      android:id="@+id/tvShowSeasonsDetailText"
+      style="@android:style/TextAppearance.Holo.Medium"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:textColor="#F0F0F0"
+      android:gravity="center_vertical"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/tvShowSeasonsItemCount"
+      app:layout_constraintBottom_toBottomOf="parent"
+      tools:textColor="@color/white"
+      tools:text="This is some text"
+      tools:ignore="SelectableText" />
 
-        <TextView
-                android:id="@+id/tvShowSeasonsItemCount"
-                style="@android:style/TextAppearance.Holo.Medium"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textColor="#F0F0F0"
-                android:gravity="center_vertical"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                tools:ignore="SelectableText"
-                tools:text="7 items"
-                tools:visibility="visible"/>
+    <TextView
+      android:id="@+id/tvShowSeasonsItemCount"
+      style="@android:style/TextAppearance.Holo.Medium"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:textColor="#F0F0F0"
+      android:gravity="center_vertical"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      tools:ignore="SelectableText"
+      tools:text="7 items"
+      tools:visibility="visible" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+  </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.appbar.MaterialToolbar>
