--- a/serenity-app/src/main/res/layout-large/activity_episode_browser.xml
+++ b/serenity-app/src/main/res/layout-large/activity_episode_browser.xml
@@ -1,61 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
-    android:background="@android:color/background_dark"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/drawer_layout"
+  android:background="@android:color/background_dark"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+>
 
   <!-- The main content view -->
 
   <RelativeLayout
-      android:id="@+id/movieBrowserBackgroundLayout"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
+    android:id="@+id/movieBrowserBackgroundLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+  >
 
     <ImageView
-        android:id="@+id/fanArt"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+      android:id="@+id/fanArt"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingStart="@dimen/overscan_start_padding"
-        android:paddingEnd="@dimen/overscan_end_padding"
-        android:paddingBottom="@dimen/overscan_bottom_padding"
-        android:layout_alignParentBottom="true"
-        android:clipToPadding="false"
-        android:clipChildren="false">
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:paddingStart="@dimen/overscan_start_padding"
+      android:paddingEnd="@dimen/overscan_end_padding"
+      android:paddingBottom="@dimen/overscan_bottom_padding"
+      android:layout_alignParentBottom="true"
+      android:clipToPadding="false"
+      android:clipChildren="false"
+    >
 
       <fragment
-          android:id="@+id/galleryFragmentContainer"
-          android:name="us.nineworlds.serenity.fragments.EpisodeVideoGalleryFragment"
-          android:layout_marginTop="@dimen/actionbarMargin"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:tag="videoGallery_fragment"/>
+        android:id="@+id/galleryFragmentContainer"
+        android:name="us.nineworlds.serenity.fragments.EpisodeVideoGalleryFragment"
+        android:layout_marginTop="@dimen/actionbarMargin"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:tag="videoGallery_fragment" />
 
     </FrameLayout>
 
-    <include layout="@layout/include_loading_progress"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_centerInParent="true"/>
+    <include
+      layout="@layout/include_loading_progress"
+      android:layout_width="150dp"
+      android:layout_height="150dp"
+      android:layout_centerInParent="true" />
 
   </RelativeLayout>
 
   <com.google.android.material.appbar.AppBarLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:background="@color/card_background"
-          >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/card_background"
+  >
 
-    <include layout="@layout/movie_custom_actionbar"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginStart="@dimen/overscan_start_padding"
-            android:layout_marginEnd="@dimen/overscan_end_padding"/>
+    <include
+      layout="@layout/movie_custom_actionbar"
+      android:layout_width="match_parent"
+      android:layout_height="45dp"
+      android:layout_marginStart="@dimen/overscan_start_padding"
+      android:layout_marginEnd="@dimen/overscan_end_padding" />
 
   </com.google.android.material.appbar.AppBarLayout>
 
