--- a/serenity-app/src/main/res/layout-large/activity_manual_server_settings.xml
+++ b/serenity-app/src/main/res/layout-large/activity_manual_server_settings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+>
 
   <fragment
-      android:id="@+id/settingsFragment"
-      android:name="us.nineworlds.serenity.ui.activity.manualentry.ManualServerSettingsFragment"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+    android:id="@+id/settingsFragment"
+    android:name="us.nineworlds.serenity.ui.activity.manualentry.ManualServerSettingsFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
 </RelativeLayout>
