--- a/serenity-app/src/main/res/layout-large/activity_movie_search_browser.xml
+++ b/serenity-app/src/main/res/layout-large/activity_movie_search_browser.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/drawer_layout"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+>
 
   <!-- The main content view -->
 
   <RelativeLayout
-      android:id="@+id/movieBrowserBackgroundLayout"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      >
+    android:id="@+id/movieBrowserBackgroundLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+  >
 
     <ImageView
-        android:id="@+id/fanArt"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+      android:id="@+id/fanArt"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
 
     <fragment
-        android:id="@+id/galleryFragmentContainer"
-        android:name="us.nineworlds.serenity.fragments.MovieSearchGalleryFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:tag="videoGallery_fragment"
-        android:layout_alignParentBottom="true"
-        />
+      android:id="@+id/galleryFragmentContainer"
+      android:name="us.nineworlds.serenity.fragments.MovieSearchGalleryFragment"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:tag="videoGallery_fragment"
+      android:layout_alignParentBottom="true" />
 
   </RelativeLayout>
 
