--- a/serenity-app/src/main/res/layout-large/button_server_manual.xml
+++ b/serenity-app/src/main/res/layout-large/button_server_manual.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
-        style="@style/Widget.AppTheme.Button.OutlinedButton.Manual"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_serenity_corners"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/manual_server_entry" />
+<com.google.android.material.button.MaterialButton
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  style="@style/Widget.AppTheme.Button.OutlinedButton.Manual"
+  android:layout_width="400dp"
+  android:layout_height="wrap_content"
+  android:background="@drawable/rounded_serenity_corners"
+  android:layout_gravity="center_horizontal"
+  android:text="@string/manual_server_entry" />
