--- a/serenity-app/src/main/res/layout-large/item_user_profile.xml
+++ b/serenity-app/src/main/res/layout-large/item_user_profile.xml
@@ -1,40 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    android:id="@+id/profile_container"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="5dp"
-    android:layout_margin="10dp"
-    android:focusable="true"
-    android:background="@android:color/black"
-    android:foreground="?selectableItemBackground"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+  android:id="@+id/profile_container"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:padding="5dp"
+  android:layout_margin="10dp"
+  android:focusable="true"
+  android:background="@android:color/black"
+  android:foreground="?selectableItemBackground"
+  android:layout_width="wrap_content"
+  android:layout_height="wrap_content"
+>
 
   <LinearLayout
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:orientation="vertical">
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+  >
 
     <ImageView
-        android:id="@+id/profile_image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_gravity="top"
-        android:layout_marginBottom="5dp"
-        android:scaleType="fitXY"
-        />
+      android:id="@+id/profile_image"
+      android:layout_width="150dp"
+      android:layout_height="150dp"
+      android:layout_gravity="top"
+      android:layout_marginBottom="5dp"
+      android:scaleType="fitXY" />
 
     <TextView
-        android:id="@+id/profile_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/lb_tv_white"
-        android:textSize="18sp"
-        android:layout_marginBottom="5dp"
-        android:layout_gravity="bottom|center_horizontal"
-        android:background="@android:color/black"
-        tools:text="Login User"/>
+      android:id="@+id/profile_name"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textColor="@color/lb_tv_white"
+      android:textSize="18sp"
+      android:layout_marginBottom="5dp"
+      android:layout_gravity="bottom|center_horizontal"
+      android:background="@android:color/black"
+      tools:text="Login User" />
 
   </LinearLayout>
 
