--- a/serenity-app/src/main/res/layout-large/movie_search_leanback.xml
+++ b/serenity-app/src/main/res/layout-large/movie_search_leanback.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+<RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+>
 
   <ImageView
-      android:id="@+id/fanArt"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      />
+    android:id="@+id/fanArt"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
   <FrameLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_alignParentTop="true"
-      android:background="@color/card_background"
-      >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_alignParentTop="true"
+    android:background="@color/card_background"
+  >
 
     <fragment
-        android:id="@+id/search_fragment"
-        android:name="us.nineworlds.serenity.ui.leanback.search.MovieSearchFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        ></fragment>
+      android:id="@+id/search_fragment"
+      android:name="us.nineworlds.serenity.ui.leanback.search.MovieSearchFragment"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+    ></fragment>
   </FrameLayout>
 
 </RelativeLayout>
