--- a/serenity-app/src/main/res/layout-large/poster_tvshow_indicator_view.xml
+++ b/serenity-app/src/main/res/layout-large/poster_tvshow_indicator_view.xml
@@ -1,74 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:padding="3dp"
-    android:focusable="true"
-    android:foreground="?selectableItemBackground"
-    >
+<FrameLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="wrap_content"
+  android:layout_height="match_parent"
+  android:padding="3dp"
+  android:focusable="true"
+  android:foreground="?selectableItemBackground"
+>
 
-  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-      android:id="@+id/posterIndicatorView"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:background="@drawable/gallery_item_background"
-      xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
-      >
+  <RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/posterIndicatorView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/gallery_item_background"
+    xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
+  >
 
     <us.nineworlds.serenity.widgets.RoundedImageView
-        android:id="@+id/posterImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        app:corner_radius="5dp"
-        android:scaleType="fitXY"
-        />
+      android:id="@+id/posterImageView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentTop="true"
+      app:corner_radius="5dp"
+      android:scaleType="fitXY" />
 
     <ImageView
-        android:id="@+id/posterWatchedIndicator"
-        android:layout_width="33dp"
-        android:layout_height="33dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:scaleType="fitXY"
-        />
+      android:id="@+id/posterWatchedIndicator"
+      android:layout_width="33dp"
+      android:layout_height="33dp"
+      android:layout_alignParentBottom="true"
+      android:layout_alignParentRight="true"
+      android:scaleType="fitXY" />
 
     <ProgressBar
-        android:id="@+id/posterInprogressIndicator"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:background="#A0000000"
-        android:clickable="false"
-        android:indeterminate="false"
-        android:indeterminateOnly="false"
-        android:max="100"
-        android:paddingTop="0dp"
-        android:progressDrawable="@drawable/scrubber_progress_holo"
-        android:visibility="invisible"
-        />
+      android:id="@+id/posterInprogressIndicator"
+      style="@android:style/Widget.ProgressBar.Horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentBottom="true"
+      android:layout_marginBottom="0dp"
+      android:layout_marginLeft="0dp"
+      android:layout_marginRight="0dp"
+      android:background="#A0000000"
+      android:clickable="false"
+      android:indeterminate="false"
+      android:indeterminateOnly="false"
+      android:max="100"
+      android:paddingTop="0dp"
+      android:progressDrawable="@drawable/scrubber_progress_holo"
+      android:visibility="invisible" />
 
     <TextView
-        android:id="@+id/badge_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:background="@drawable/item_badge_count"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:visibility="visible"
-        />
+      android:id="@+id/badge_count"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textColor="@color/white"
+      android:background="@drawable/item_badge_count"
+      android:paddingLeft="8dp"
+      android:paddingRight="8dp"
+      android:paddingTop="6dp"
+      android:paddingBottom="6dp"
+      android:layout_marginLeft="5dp"
+      android:layout_marginRight="5dp"
+      android:layout_alignParentTop="true"
+      android:layout_alignParentRight="true"
+      android:layout_alignParentEnd="true"
+      android:visibility="visible" />
 
   </RelativeLayout>
 
