--- a/serenity-app/src/main/res/layout-large/video_gallery_fragment.xml
+++ b/serenity-app/src/main/res/layout-large/video_gallery_fragment.xml
@@ -1,214 +1,219 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        tools:background="@drawable/movies">
+<androidx.constraintlayout.widget.ConstraintLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:clipChildren="false"
+  android:clipToPadding="false"
+  tools:background="@drawable/movies"
+>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline_vertical_start"
+    android:layout_width="0dp"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_begin="48dp" />
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline_vertical_end"
+    android:layout_width="0dp"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_constraintGuide_end="48dp" />
+
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline_top"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:orientation="horizontal"
+    app:layout_constraintGuide_percent="0" />
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline_center"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:orientation="horizontal"
+    app:layout_constraintGuide_percent="0.60" />
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:orientation="horizontal"
+    app:layout_constraintGuide_end="10dp" />
+
+  <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/video_details_container"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:background="@color/card_background"
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    android:padding="5dp"
+    android:visibility="invisible"
+    app:layout_constraintBottom_toTopOf="@id/guideline_center"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:layout_editor_absoluteX="10dp"
+    tools:visibility="visible"
+  >
 
     <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical_start"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="48dp" />
+      android:id="@+id/guideline_vertical_details_start"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_vertical_end"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="48dp" />
-
-
-    <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_top"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0" />
+      android:id="@+id/guideline_vertical_details_end"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.95" />
 
     <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_center"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.60" />
+      android:id="@+id/guideline_details_25"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:orientation="vertical"
+      app:layout_constraintGuide_percent="0.25" />
 
-    <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_end="10dp" />
+    <us.nineworlds.serenity.widgets.RoundedImageView
+      android:id="@+id/video_poster"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:layout_constraintStart_toEndOf="@+id/guideline_vertical_details_start"
+      app:layout_constraintEnd_toStartOf="@+id/guideline_details_25"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintDimensionRatio="H,2:3"
+      android:layout_margin="5dp"
+      app:corner_radius="5dp"
+      app:mutate_background="true" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/video_details_container"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/card_background"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            android:padding="5dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@id/guideline_center"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="10dp"
-            tools:visibility="visible">
+    <TextView
+      android:id="@+id/movieBrowserPosterTitle"
+      style="@android:style/TextAppearance.Holo.Large"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="15dp"
+      android:layout_marginRight="15dp"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/guideline_details_25"
+      app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_details_end"
+      app:layout_constrainedWidth="true"
+      android:gravity="start|center_vertical"
+      android:paddingStart="10dp"
+      android:paddingEnd="0dp"
+      android:textColor="#F0F0F0"
+      android:textStyle="bold"
+      tools:ignore="SelectableText"
+      tools:text="Movie Title"
+      tools:textColor="@color/white"
+      tools:visibility="visible" />
 
-        <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline_vertical_details_start"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.05" />
+    <TextView
+      android:id="@+id/movieSummary"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_marginLeft="15dp"
+      android:layout_marginRight="15dp"
+      app:layout_constraintStart_toEndOf="@+id/guideline_details_25"
+      app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_details_end"
+      app:layout_constraintTop_toBottomOf="@+id/movieBrowserPosterTitle"
+      app:layout_constraintBottom_toTopOf="@+id/videoTextExtra"
+      android:ellipsize="marquee"
+      android:paddingLeft="10dp"
+      android:paddingRight="10dp"
+      android:textColor="#F0F0F0"
+      android:textSize="17.5sp"
+      tools:ignore="SelectableText"
+      tools:lines="8"
+      tools:text="Summary of the movie.\r\nSummary of the Movie.\r\n" />
 
-        <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline_vertical_details_end"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.95" />
-
-        <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline_details_25"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.25" />
-
-        <us.nineworlds.serenity.widgets.RoundedImageView
-                android:id="@+id/video_poster"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintStart_toEndOf="@+id/guideline_vertical_details_start"
-                app:layout_constraintEnd_toStartOf="@+id/guideline_details_25"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintDimensionRatio="H,2:3"
-                android:layout_margin="5dp"
-                app:corner_radius="5dp"
-                app:mutate_background="true" />
-
-        <TextView
-                android:id="@+id/movieBrowserPosterTitle"
-                style="@android:style/TextAppearance.Holo.Large"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/guideline_details_25"
-                app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_details_end"
-                app:layout_constrainedWidth="true"
-                android:gravity="start|center_vertical"
-                android:paddingStart="10dp"
-                android:paddingEnd="0dp"
-                android:textColor="#F0F0F0"
-                android:textStyle="bold"
-                tools:ignore="SelectableText"
-                tools:text="Movie Title"
-                tools:textColor="@color/white"
-                tools:visibility="visible" />
-
-        <TextView
-                android:id="@+id/movieSummary"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                app:layout_constraintStart_toEndOf="@+id/guideline_details_25"
-                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_details_end"
-                app:layout_constraintTop_toBottomOf="@+id/movieBrowserPosterTitle"
-                app:layout_constraintBottom_toTopOf="@+id/videoTextExtra"
-                android:ellipsize="marquee"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textColor="#F0F0F0"
-                android:textSize="17.5sp"
-                tools:ignore="SelectableText"
-                tools:lines="8"
-                tools:text="Summary of the movie.\r\nSummary of the Movie.\r\n" />
-
-        <TextView
-                android:id="@+id/videoTextExtra"
-                style="@android:style/TextAppearance.Holo.Medium"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                app:layout_constraintStart_toEndOf="@+id/guideline_details_25"
-                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_details_end"
-                app:layout_constraintBottom_toTopOf="@+id/movieInfoGraphicLayout"
-                android:gravity="start"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textStyle="bold"
-                android:visibility="invisible"
-                tools:text="Aired Date: "
-                tools:visibility="visible" />
-
-        <LinearLayout
-                android:id="@+id/movieInfoGraphicLayout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@+id/guideline_details_25"
-                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_details_end"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="5dp"
-                android:gravity="bottom"
-                android:orientation="horizontal"
-                tools:minHeight="@dimen/audio_inographic_height"
-                tools:orientation="horizontal"
-                tools:visibility="visible" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+      android:id="@+id/videoTextExtra"
+      style="@android:style/TextAppearance.Holo.Medium"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_gravity="start"
+      android:layout_marginLeft="15dp"
+      android:layout_marginRight="15dp"
+      app:layout_constraintStart_toEndOf="@+id/guideline_details_25"
+      app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_details_end"
+      app:layout_constraintBottom_toTopOf="@+id/movieInfoGraphicLayout"
+      android:gravity="start"
+      android:paddingLeft="10dp"
+      android:paddingRight="10dp"
+      android:textStyle="bold"
+      android:visibility="invisible"
+      tools:text="Aired Date: "
+      tools:visibility="visible" />
 
     <LinearLayout
-            android:id="@+id/tableRow2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/guideline"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="#A0000000"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            android:gravity="bottom"
-            android:padding="5dp">
+      android:id="@+id/movieInfoGraphicLayout"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      app:layout_constraintStart_toEndOf="@+id/guideline_details_25"
+      app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_details_end"
+      app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_marginStart="15dp"
+      android:layout_marginEnd="5dp"
+      android:gravity="bottom"
+      android:orientation="horizontal"
+      tools:minHeight="@dimen/audio_inographic_height"
+      tools:orientation="horizontal"
+      tools:visibility="visible" />
+  </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/moviePosterView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingStart="@dimen/overscan_start_padding"
-                android:paddingEnd="@dimen/overscan_end_padding"
-                android:layout_gravity="center|center_vertical"
-                android:clipChildren="false"
-                android:clipToPadding="false"
-                android:focusable="true"
-                android:nextFocusUp="@+id/categoryFilter"
-                tools:layoutManager="LinearLayoutManager"
-                tools:layout_height="200dp"
-                tools:layout_width="match_parent"
-                tools:listitem="@layout/poster_indicator_view"
-                tools:visibility="visible"
-                tools:orientation="horizontal">
+  <LinearLayout
+    android:id="@+id/tableRow2"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    app:layout_constraintBottom_toTopOf="@id/guideline"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:background="#A0000000"
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    android:gravity="bottom"
+    android:padding="5dp"
+  >
 
-            <requestFocus />
-        </androidx.recyclerview.widget.RecyclerView>
+    <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/moviePosterView"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:paddingStart="@dimen/overscan_start_padding"
+      android:paddingEnd="@dimen/overscan_end_padding"
+      android:layout_gravity="center|center_vertical"
+      android:clipChildren="false"
+      android:clipToPadding="false"
+      android:focusable="true"
+      android:nextFocusUp="@+id/categoryFilter"
+      tools:layoutManager="LinearLayoutManager"
+      tools:layout_height="200dp"
+      tools:layout_width="match_parent"
+      tools:listitem="@layout/poster_indicator_view"
+      tools:visibility="visible"
+      tools:orientation="horizontal"
+    >
 
-    </LinearLayout>
+      <requestFocus />
+    </androidx.recyclerview.widget.RecyclerView>
 
-    <include
-            layout="@layout/include_loading_progress"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+  </LinearLayout>
+
+  <include
+    layout="@layout/include_loading_progress"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
