--- a/serenity-app/src/main/res/layout/exo_player_view.xml
+++ b/serenity-app/src/main/res/layout/exo_player_view.xml
@@ -1,52 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <com.google.android.exoplayer2.ui.AspectRatioFrameLayout android:id="@id/exo_content_frame"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_gravity="center">
+  <com.google.android.exoplayer2.ui.AspectRatioFrameLayout
+    android:id="@id/exo_content_frame"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+  >
 
     <!-- Video surface will be inserted as the first child of the content frame. -->
 
-    <View android:id="@id/exo_shutter"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/black"/>
+    <View
+      android:id="@id/exo_shutter"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@android:color/black" />
 
-    <ImageView android:id="@id/exo_artwork"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"/>
+    <ImageView
+      android:id="@id/exo_artwork"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:scaleType="fitXY" />
 
-    <com.google.android.exoplayer2.ui.SubtitleView android:id="@id/exo_subtitles"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <com.google.android.exoplayer2.ui.SubtitleView
+      android:id="@id/exo_subtitles"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
 
     <ProgressBar
-        android:id="@id/exo_buffering"
-        android:theme="@style/Theme.Leanback"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:indeterminate="true"
-        android:layout_centerInParent="true"/>
+      android:id="@id/exo_buffering"
+      android:theme="@style/Theme.Leanback"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
+      android:layout_gravity="center"
+      android:indeterminate="true"
+      android:layout_centerInParent="true" />
 
-    <TextView android:id="@id/exo_error_message"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:background="@color/exo_error_message_background_color"
-        android:padding="16dp"/>
+    <TextView
+      android:id="@id/exo_error_message"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_gravity="center"
+      android:gravity="center"
+      android:background="@color/exo_error_message_background_color"
+      android:padding="16dp" />
 
   </com.google.android.exoplayer2.ui.AspectRatioFrameLayout>
 
-  <FrameLayout android:id="@id/exo_overlay"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+  <FrameLayout
+    android:id="@id/exo_overlay"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
-  <View android:id="@id/exo_controller_placeholder"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+  <View
+    android:id="@id/exo_controller_placeholder"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
 </merge>
